# serverlink

./: .dockerignore  .gitignore  ASIO_INTEGRATION_STATUS.md  BENCHMARK_COMPARISON_ASIO.md  BENCHMARK_COMPARISON_COMPLETE.md  BENCHMARK_RESULTS.md  CI_CD_FILES.txt  CI_CD_IMPLEMENTATION.md  CLAUDE.md  CMakeLists.txt  Dockerfile  FINAL_ANALYSIS.md  GEMINI.md  IOCP_DUPLICATE_SOCKET_REGISTRATION_ANALYSIS.md  IOCP_LOAD_COUNT_FIX.md  IOCP_PHASE2_SUMMARY.txt  IOCP_PHASE4_FINAL_ANALYSIS.md  IOCP_PHASE4_SOCKET_FIX.md  LONG_TERM_STABILITY_PLAN_V2.md  MONITORING_PERFORMANCE_IMPACT.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATION.md  PHASE12_SUMMARY.md  PHASE1_IOCP_CMAKE_SETUP.md  PHASE4_CONNECTER_INTEGRATION.md  PHASE4_SPAN_SUMMARY.md  PHASE6_CHANGES.txt  PHASE6_CONSTEVAL_SUMMARY.md  PHASE9_CHANGES.md  PHASE9_STD_FORMAT_SUMMARY.md  README.ko.md  README.md  SELECT_IMPLEMENTATION.md  SIMPLIFIED_IOCP_ERROR87_ANALYSIS.md  SIMPLIFIED_IOCP_PHASE3_LISTENER.md  SIMPLIFIED_IOCP_PHASE5_COMPLETE.md  SPOT_CONNECT_RID_IMPLEMENTATION.md  TESTING.md  TODO_BASELINE.md  VERSION  (+27 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  benchmark.yml  build.yml  pr-check.yml
benchmark_results/: BASELINE_CPP17.md  comparison_20260101_141514.txt  comparison_20260110_053042.txt  comparison_20260110_072341.txt  comparison_20260110_072615.txt  libzmq_vs_serverlink_comparison.md  summary_report.md
cmake/: config.h.in  platform.cmake  serverlinkConfig.cmake.in
doc/: REDIS_PUBSUB.md
docs/: BENCHMARK_COMPARISON.md  BENCHMARK_RUN_OUTPUT.md  CPP20_PORTING_PERFORMANCE.md  CPP20_PORTING_PHASE10_FINAL.md  IOCP_PHASE2_COMPLETE.md  PHASE10_EXAMPLES.md  PHASE6_CONNECTEX_IMPLEMENTATION.md  SERVERLINK_VS_LIBZMQ_COMPARISON.md  SPOT_CLUSTER_QUICK_START.md  SPOT_PHASE5_CLUSTER_PROTOCOL.md  TEST_SOCKOPT_HWM_ANALYSIS.md  WINDOWS_DLL_TROUBLESHOOTING.md
examples/: CMakeLists.txt  SPOT_EXAMPLES_README.md  SPOT_SAMPLES_SUMMARY.md  master_node.c  router_to_router_simple.c  span_api_example.cpp  spot_basic.c  spot_cluster_publisher.c  spot_cluster_subscriber.c  spot_cluster_sync_example.cpp  spot_mmorpg_cell.c  spot_multi_topic.c  test_c_api.c  test_inproc_timing.c  test_simple.c  worker_node.c
examples/pubsub/: broker_example.c  cluster_example.c  mesh_topology_example.c  psubscribe_example.c  sharded_example.c
scripts/: chaos_monkey.sh  compare_benchmarks.py  format_benchmark.py  full_comparison.sh  monitor_resource.sh  run_benchmarks.ps1  run_benchmarks.sh  run_simulation.sh  run_tests.ps1  run_tests.sh  start_longterm_test.sh  stop_longterm_test.sh  stress_pubsub_fanout.sh  stress_router_cluster.sh
src/: precompiled.hpp  serverlink.cpp
tests/: CMakeLists.txt  test_minimal_router.cpp  testutil.hpp
tests/benchmark/: CMakeLists.txt  COMPILATION_GUIDE.txt  README.md  SPOT_BENCHMARK_README.md  SPOT_BENCHMARK_SUMMARY.md  SPOT_QUICK_REFERENCE.md  USAGE.md  bench_all_types.cpp  bench_common.hpp  bench_dealer_router_lat.cpp  bench_dealer_router_thr.cpp  bench_inproc_relay.cpp  bench_latency.cpp  bench_profile.cpp  bench_pubsub.cpp  bench_slk_perf.cpp  bench_spot_latency.cpp  bench_spot_scalability.cpp  bench_spot_throughput.cpp  bench_throughput.cpp  bench_throughput_pair.cpp  bench_zmq_matrix.cpp  bench_zmq_pubsub  bench_zmq_pubsub.cpp  bench_zmq_router  bench_zmq_router.cpp  run_comparison.sh  run_libzmq.sh  run_serverlink.sh  run_socket_matrix.sh  test_router_router_minimal  test_router_router_minimal.cpp
tests/benchmark/comparison_suite/: dealer_router_slk  dealer_router_slk.cpp  dealer_router_zmq  dealer_router_zmq.cpp  pair_slk  pair_slk.cpp  pair_zmq  pair_zmq.cpp  pubsub_slk  pubsub_slk.cpp  pubsub_zmq  pubsub_zmq.cpp  router_router_slk  router_router_slk.cpp  router_router_zmq  router_router_zmq.cpp  run_bench.sh  slk_perf.cpp  zmq_perf.cpp
tests/benchmarkwithzmq/: final_report.txt  final_throughput.txt  run_all.sh  run_final.sh  run_grouped.sh  smoke_test.sh
tests/benchmarkwithzmq/src/: slk_dealer_dealer.cpp  slk_dealer_router.cpp  slk_dr_debug.cpp  slk_pubsub.cpp  slk_router_router.cpp  zmq_bench.cpp  zmq_dealer_dealer.cpp  zmq_dealer_router.cpp  zmq_pubsub.cpp  zmq_router_router.cpp
tests/integration/: test_router_to_router.cpp
tests/monitor/: test_heartbeat.cpp  test_peer_stats.cpp
tests/pattern/: test_dealer.cpp  test_glob_pattern.cpp  test_pattern_trie.cpp
tests/poller/: test_poller.cpp
tests/proxy/: test_proxy.cpp  test_proxy_simple.cpp
tests/pubsub/: test_auth_pubsub.cpp  test_hwm_pubsub.cpp  test_introspection.cpp  test_psubscribe.cpp  test_pubsub_broker.cpp  test_pubsub_cluster.cpp  test_pubsub_topics_count.cpp  test_sharded_pubsub.cpp  test_sub_forward.cpp  test_xpub_manual.cpp  test_xpub_manual_debug.cpp  test_xpub_nodrop.cpp  test_xpub_verbose.cpp
tests/router/: test_connect_rid.cpp  test_probe_router.cpp  test_router_basic.cpp  test_router_handover.cpp  test_router_mandatory.cpp  test_router_mandatory_hwm.cpp  test_router_notify.cpp  test_spec_router.cpp
tests/spot/: README.ko.md  README.md  test_spot_basic.cpp  test_spot_cluster.cpp  test_spot_debug.cpp  test_spot_local.cpp  test_spot_mixed.cpp  test_spot_remote.cpp  test_spot_remote_debug.cpp
tests/transport/: test_bind_after_connect.cpp  test_inproc_connect.cpp  test_ipc_basic.cpp  test_ipc_minimal.cpp  test_reconnect_ivl.cpp
tests/unit/: test_asio_integration.cpp  test_ctx.cpp  test_ctx_concurrency.cpp  test_ctx_debug.cpp  test_ctx_options.cpp  test_dealer.cpp  test_error_handling.cpp  test_format_helpers.cpp  test_hwm.cpp  test_last_endpoint.cpp  test_msg.cpp  test_pair.cpp  test_pubsub.cpp  test_reqrep.cpp  test_router.cpp  test_sockopt_hwm.cpp  test_span_api.cpp  test_tcp_keepalive.cpp  test_tcp_stream.cpp
tests/unit_zmq/: test_dealer_zmq  test_dealer_zmq.cpp  test_pair_zmq  test_pair_zmq.cpp  test_reqrep_zmq  test_reqrep_zmq.cpp
tests/util/: test_atomics.cpp  test_has.cpp  test_stopwatch.cpp  test_timers.cpp
tests/windows/: test_wsastartup_order.cpp
tmp_bench/: bench_zmq_perf.c  zmq_dealer_lat  zmq_dealer_lat.c  zmq_dealer_thr  zmq_dealer_thr.c  zmq_perf  zmq_thr  zmq_universal_thr.c
(+535 files in other folders)
